# cgrc

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  cgrc_conf.h  cgrc_data.cpp  cgrc_data.h  cgrcconfmanager.cpp  cgrcconfmanager.h  cgrcparser.cpp  cgrcparser.h  conf.qrc  main.cpp
.github/workflows/: build.yml
arch/: PKGBUILD
cgrc-rust/: Cargo.toml  Dockerfile  README.md  prepare.sh
cgrc-rust/src/: cgrc_data.rs  cgrccli.rs  cgrcconf.rs  cgrcconfmanager.rs  cgrcconfstorage.rs  cgrcdata.rs  cgrcparser.rs  main.rs
conf/: dockergitlab  dockerps  dockerstats  logcat  nginx  ping  prio
debian/: README.Debian  README.source  changelog  control  copyright  rules
macports/: Portfile
snap/: snapcraft.yaml
