[package]
name = "cgrc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
directories = "5.0"
log = "0.4.0"
env_logger = "0.9.0"
phf = { version = "0.11", features = ["macros"] }